<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="0"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_a_score"
                        android:gravity="center"
                        android:text="-"
                        android:textSize="35sp" />


                    <TextView
                        android:id="@+id/team_a_wicket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/text_2"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="35sp" />


                </RelativeLayout>

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddSixForA"
                    android:text="@string/six_runs" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddFourForA"
                    android:text="@string/Four_runs" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddOneForA"
                    android:text="@string/one_run" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddWicketForA"
                    android:text="@string/wicket" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="UndoForA"
                    android:text="@string/undo" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"></View>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">


                <TextView

                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="0"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/text_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_b_score"
                        android:text="-"
                        android:textSize="35sp" />


                    <TextView
                        android:id="@+id/team_b_wicket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/text_3"
                        android:text="0"
                        android:textSize="35sp" />


                </RelativeLayout>

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddSixForB"
                    android:text="@string/six_runs" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddFourForB"
                    android:text="@string/Four_runs" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddOneForB"
                    android:text="@string/one_run" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="AddWicketForB"
                    android:text="@string/wicket" />

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="UndoForb"
                    android:text="@string/undo" />
            </LinearLayout>

        </LinearLayout>

        <Button

            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:onClick="resetScores"
            android:text="@string/reset" />


    </RelativeLayout>

</ScrollView>